fix: fixing container issues
